--- a/JEGenerator/plugin.yml
+++ b/JEGenerator/plugin.yml
@@ -1,5 +1,5 @@
 name: JEGenerator
-main: tedo0627\jegenerator\JEGenerator
+main: tedo0627\jegenerator\JEGeneratorPlugin
 version: 1.0.0
 api: 4.5.0
 author: tedo0627
