--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,12 @@ jobs:
         with: 
           submodules: true
 
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+
       - name: Restore PHP build cache
         id: php-build-cache
         uses: actions/cache@v2
