--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,12 @@ jobs:
         with: 
           submodules: true
 
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+
       - name: Restore PHP build cache
         id: php-build-cache
         uses: actions/cache@v2
@@ -51,12 +57,6 @@ jobs:
         #with:
           #upload_url: ${{ github.event.release.upload_url }}
           #asset_path: ${{ github.workspace }}/extension/modules/calljava.so
-
-      - name: Set up JDK 16
-        uses: actions/setup-java@v2
-        with:
-          java-version: '16'
-          distribution: 'adopt'
 
       - name: Compile Loader
         run: |
@@ -120,6 +120,10 @@ jobs:
         env:
           VS_EDITION: Enterprise
           SOURCES_PATH: ${{ github.workspace }}\pocketmine-php-sdk
+        working-directory: build-script/build-script
+
+      - name: ls
+        run: ls
         working-directory: build-script/build-script
 
       #- name: Upload a Release Asset
