--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
         with: 
           submodules: true
 
-      - name: Set up JDK 16
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '16'
+          java-version: '17'
           distribution: 'adopt'
 
       - name: Restore PHP build cache
@@ -99,10 +99,10 @@ jobs:
       - name: Install tools and dependencies
         run: choco install wget --no-progress
 
-      - name: Set up JDK 16
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '16'
+          java-version: '17'
           distribution: 'adopt'
 
       - name: Set bot email
@@ -157,4 +157,12 @@ jobs:
         with:
           name: windows
           path: ${{ github.workspace }}/build-script/build-script/bin/php/ext/php_calljava.dll
+          if-no-files-found: error
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: windows
+          path: ${{ github.workspace }}\pocketmine-php-sdk\php-src\x64\Release_TS\php-debug-pack-8.0.19-Win32-vs16-x64.zip
           if-no-files-found: error
